--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
 
+    <ul class="meny">
+        <li><a class="li" href="lag-bruker.html">Lag bruker</a></li>
+        <li><a class="li" href="index.html">Endre</a></li>
+    </ul>
+
   <div class="grid-container">
     <div>
 
@@ -68,54 +73,6 @@
 
     </div>
 </div>
-
-  <div>
-    <h1 class="h1Style">Skule database</h1>
-
-  </div>
-  <div class="grid">
-    <div class="gridItem"></div>
-    <div class="gridItem">
-      <div class="box">
-        <div>
-          <label>Navn</label> <br>
-          <input id="fname" type="text"> <br> <br>
-        </div>
-
-        <div>
-          <label>Etter navn</label> <br>
-          <input id="lname" type="text"> <br> <br>
-        </div>
-
-        <div>
-          <label>Postnr</label> <br>
-          <input id="zip" type="text"> <br> <br>
-        </div>
-
-        <div>
-          <label>Adresse</label> <br>
-          <input id="Address" type="text"> <br> <br>
-        </div>
-
-        <div>
-          <label>Poststed</label> <br>
-          <input id="city" type="text"> <br> <br>
-        </div>
-
-        <div>
-          <label>Passord</label> <br>
-          <input id="password" type="password"> <br> <br>
-        </div>
-
-        <div>
-          <label>E-post Adresse</label> <br>
-          <input id="email" type="email"> <br> <br>
-        </div>
-        <button onclick="signUp()">lag bruker</button> <br> <br>
-        <button onclick="window.location.href = 'logg-in.html';">Logg inn</button>
-      </div>
-    </div>
-  </div>
 
   
 
