--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul class="meny">
         <li><a class="li" href="lag-bruker.html">Lag bruker</a></li>
         <li><a class="li" href="index.html">Endre</a></li>
+        <li><a class="li" href="Admin.html">Lag bruker admin</a></li>
     </ul>
 
   <div class="grid-container">
