--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <li><a class="li" href="lag-bruker.html">Lag bruker</a></li>
         <li><a class="li" href="index.html">Endre</a></li>
         <li><a class="li" href="Admin.html">Lag bruker admin</a></li>
+        <li><a class="li" href="Lerar.html">Lag bruker lærar</a></li>
+        <li><a class="li" href="Elev.html">Lag bruker elev</a></li>
+        <li><a class="li" href="Miljøfagarbeidar.html">Lag bruker miljøfagarbeidar</a></li>
+        <li><a class="li" href="IT-medarbeidar.html">Lag bruker IT-medarbeidar</a></li>
     </ul>
 
   <div class="grid-container">
