--- a/Elev.html
+++ b/Elev.html
@@ -20,6 +20,7 @@
     
     <div>
         <h1 class="h1Style">Skule database</h1>
+        <h2 class="h1Style">Elev</h2>
     
       </div>
       <div class="grid">
