--- a/Lerar.html
+++ b/Lerar.html
@@ -20,7 +20,7 @@
     
     <div>
         <h1 class="h1Style">Skule database</h1>
-        <h2>Lærara</h2>
+        <h2 class="h1Style">Lærar</h2>
     
       </div>
       <div class="grid">
